@@ -3,6 +3,7 @@
  - Updated @splitsoftware/splitio-commons package to version 1.18.0 that includes minor updates:
     - Added support for targeting rules based on large segments for browsers.
     - Updated some transitive dependencies for vulnerability fixes.
+ - Bugfixing - Removed an overloaded `client` method in the `SplitIO.ISDK` interface that accepted a key and trafficType parameters. This interface corresponds to the SDK factory instance in NodeJS, which, unlike `SplitIO.IBrowserSDK` for the Browser, does not handle multiple client instances based on keys or traffic types.
 
 10.28.0 (September 6, 2024)
  - Updated @splitsoftware/splitio-commons package to version 1.17.0 that includes minor updates:
